# rust-swift-mvp

ios/SampleApp/: ContentView.swift
rust-core/: Cargo.toml  build.rs
rust-core/src/: did.rs  jwk.rs  key_manager.rs  key_store.rs  lib.rs  rust-core.udl
scripts/: build-ios-framework.sh
